--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@tanstack/react-query-devtools": "^5.75.7",
     "@xyflow/react": "^12.6.3",
     "axios": "^1.9.0",
-    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
+    "draft-js": "^0.11.7",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
@@ -35,6 +36,7 @@
     "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "sonner": "^2.0.3",
@@ -49,6 +51,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwind-animate": "^0.2.10",
