--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-alert-dialog": "^1.1.13",
-    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-hover-card": "^1.1.13",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.13",
@@ -35,8 +36,8 @@
     "next-themes": "^0.4.6",
     "open-graph-scraper": "^6.10.0",
     "prisma": "^6.7.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
